--- a/src/View/Home/_steps.html.twig
+++ b/src/View/Home/_steps.html.twig
@@ -1,7 +1,7 @@
 <div class="steps">
     <div class="steps_bottom steps_first">
         <div class="steps_first_image">
-            <a href="_steps.html.twig">
+            <a href="#">
                 <img class="steps_img" src="/assets/images/icon-step1.png"
                      alt="witch image"
                 />
@@ -15,7 +15,7 @@
     <div class="bottom_to_top"></div>
     <div class="steps_top steps_second">
         <div class="steps_second_image">
-            <a href="_steps.html.twig">
+            <a href="#">
                 <img class="steps_img" src="/assets/images/icon-step2.png"
                      alt="like image"
                 />
@@ -33,7 +33,7 @@
     <div class="top_to_bottom"></div>
     <div class="steps_bottom steps_third">
         <div class="steps_third_image">
-            <a href="_steps.html.twig">
+            <a href="#">
                 <img class="steps_img" src="/assets/images/icon-step3.png"
                  alt="hunt image"
                 />
@@ -51,7 +51,7 @@
     <div class="bottom_to_top"></div>
     <div class="steps_top steps_fouth">
         <div class="steps_fourth_image">
-            <a href="_steps.html.twig">
+            <a href="#">
             <img class="steps_img" src="/assets/images/icon-step4.png"
                  alt="money image"
             />
