--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,5 +1,11 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Hello Wilder !</h1>
+
+    <img class="homepage" src="/assets/images/witch.jpg" alt="sorcière" width="1500px">
+    <div class="mep">
+
+    <img class="fond" src="/assets/images/fondblanc.svg" alt="fond" width="1440px">
+        <img class="fond-vert" src="/assets/images/fondvert.svg" alt="fond" width="1440px">
+    </div>
 {% endblock %}
