--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-    <img class="homepage" src="/assets/images/witch.jpg" alt="sorcière" width="1500px">
+    <img class="homepage" src="/assets/images/witch.jpg" alt="sorcière" width="100%">
     <div class="mep">
 
-    <img class="fond" src="/assets/images/fondblanc.svg" alt="fond" width="1440px">
-        <img class="fond-vert" src="/assets/images/fondvert.svg" alt="fond" width="1440px">
+    <img class="fond" src="/assets/images/fondblanc.svg" alt="fond" width="100%">
+        <img class="fond-vert" src="/assets/images/fondvert.svg" alt="fond" width="100%">
     </div>
 {% endblock %}
