--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -6,6 +6,12 @@
     <div class="mep">
 
     <img class="fond" src="/assets/images/fondblanc.svg" alt="fond" width="100%">
+        {% include '/Home/_steps.html.twig'%}
+        <div class="barre-de-separation"></div>
+        {% include '/Home/_monthWitch.html.twig' %}
         <img class="fond-vert" src="/assets/images/fondvert.svg" alt="fond" width="100%">
     </div>
+
+    </div>
 {% endblock %}
+
