--- a/src/View/Home/_navbar.html.twig
+++ b/src/View/Home/_navbar.html.twig
@@ -21,9 +21,8 @@
 
             <ul class="navbar-nav nav-flex-icons">
                 <li class="nav-item">
-                    <a href="#" class="nav-link rounded"
-                       target="_blank">
-                        <i class="fab fa-github mr-1"></i> Je balance !
+                    <a href="#" class="nav-link balance rounded">
+                        <b>Je balance !</b>
                     </a>
                 </li>
             </ul>
