--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -11,8 +11,6 @@
         {% include '/Home/_monthWitch.html.twig' %}
         <img class="fond-vert" src="/assets/images/fondvert.svg" alt="fond" width="100%">
     </div>
-
-    </div>
-
+    {% include '/Home/_cards.html.twig' %}
 {% endblock %}
 
