--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,54 +1,42 @@
 :root{
     --greeny: #99A267;
 }
-
 body{
     overflow-x: hidden;
     margin: 0;
     background: #1C2331;
 }
-
 .view,body,html{height:100%}
 .navbar{background-color:rgba(0,0,0,0)}
 .page-footer,.top-nav-collapse{background-color:#1C2331}
-
 @media only screen and (max-width:768px) {.navbar{background-color: gray}}
-
 a.nav-link.rounded{
     border: 1px solid lightgrey;
 }
-
 a.nav-link.rounded:hover {
     background-color: chocolate;
     color: black;
     border: chocolate;
 }
-
 .nav-link{
     font-size: 1.1vw;
 }
-
 a.navbar-brand{
     font-size: 2vw;
 }
-
 a.nav-link{
     color: lightgray;
 }
-
 a.nav-link:hover{
     color: whitesmoke;
 }
-
 strong{
     color: white;
 }
-
 .homepage{
     position: absolute;
     z-index: 1;
 }
-
 button.jebalance{
     position: relative;
     z-index: 10;
@@ -58,13 +46,10 @@ button.jebalance{
     border-radius: 50px;
     border: 1px solid #5F653E;
     font-size: 2.2vw;
-
 }
 button.jebalance:hover{
     color: whitesmoke;
 }
-
-
 div.mep{
     display: flex;
     justify-content: center;
@@ -72,15 +57,16 @@ div.mep{
     flex-direction: column;
     align-items: center;
 }
-
 .fond{
     position: relative;
     z-index: 10;
     margin-block-start: 7em;
 }
-
 .fond-vert{
     position: relative;
     z-index: 11;
     margin-block-start: 10em;
+}
+.modal-content {
+    background-image: url(/public/assets/images/);
 }
