--- a/src/View/Home/_navbar.html.twig
+++ b/src/View/Home/_navbar.html.twig
@@ -1,25 +1,25 @@
 <nav class="navbar fixed-top navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <strong>Balance ta Witch</strong>
+            <strong>#BalanceTaWitch</strong>
         </a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto ml-3">
                 <li class="nav-item">
-                    <a class="nav-link pt-3" href="#">JUGER</a>
+                    <a class="nav-link pt-3" href="#">JUDGE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pt-3" href="#">CHASSER</a>
+                    <a class="nav-link pt-3" href="#">HUNT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pt-3" href="#">TROPHÉS</a>
+                    <a class="nav-link pt-3" href="#">AWARDS</a>
                 </li>
             </ul>
             <ul class="navbar-nav nav-flex-icons">
                 <li class="nav-item">
                     <a data-toggle="modal" data-target="#exampleModal" class="nav-link rounded"
                        target="_blank">
-                        <i class="fab fa-github mr-1"></i> Je balance !
+                        <i class="fab fa-github mr-1"></i> Denunce !
                     </a>
                 </li>
             </ul>
@@ -29,13 +29,13 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">New denunciation</h5>
+            <div class="modal-header text-white">
+                <h5>DENUNCIATION</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-white">
                 <form action="/home/add" method="POST" id="insert_form">
                     <div class="form-group">
                         <label for="firstname" class="col-form-label">Firstname</label>
@@ -48,7 +48,7 @@
                     <div>
                         {% for attribute in attributes %}
                         <label for="" class="col-form-label">{{ attribute.name }}</label>
-                        <input type="checkbox" name="attribute[]" value="  {{ attribute.id }}">
+                        <input type="checkbox" name="attribute[]" value="{{ attribute.id }}">
                         {% endfor %}
                     </div>
                     <div class="modal-footer">
@@ -56,7 +56,6 @@
                     </div>
                 </form>
             </div>
-
         </div>
     </div>
 </div>
