--- a/src/View/Home/_cards.html.twig
+++ b/src/View/Home/_cards.html.twig
@@ -1,4 +1,3 @@
-{% extends 'layout.html.twig' %}
 {% block content %}
 <div class="infocardContainer ">
         <div class="row align-items-start">
@@ -9,7 +8,7 @@
                     <img src="/assets/images/{{ witch.photo }}">
                 </div>
                 <div class="details">
-                    <h2>{{ witch.firstname }}<br><span>{{ witch.lastname }}<br>description: {{witch.attributs}}<br>reward: {{ witch.reward }}$$$</span></h2>
+                    <h2>{{ witch.firstname }}<br><span>{{ witch.lastname }}<br>description: {{witch.attributs}}<br></span></h2>
                 </div>
             </div>
         </div>
