--- a/src/View/Home/_monthWitch.html.twig
+++ b/src/View/Home/_monthWitch.html.twig
@@ -1,12 +1,12 @@
 <div class="witch-of-the-month">
     <div class="wotm-text">
-        <h2>&#128293; Witch of the month &#128293;</h2>
+        <h2>&#128293; AWARDS &#128293;</h2>
     </div>
     <div class="pas-inspi">
         <div class="witch-descript">
             <p>Bellatrix, was evil, probably Satan's daughter.<br>
                 She was burnt in the public square <br> after being denounced by honest citizens <br>
-                and captured by the clergy.</p>
+                and captured by the Clergy.</p>
         </div>
         <div class="image-area">
             <div class="img-wrapper">
