--- a/src/View/Home/_navbar.html.twig
+++ b/src/View/Home/_navbar.html.twig
@@ -6,7 +6,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto ml-3">
                 <li class="nav-item">
-                    <a class="nav-link pt-3" href="#">JUDGE</a>
+                    <a class="nav-link pt-3" href="#judge">JUDGE</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link pt-3" href="#">HUNT</a>
@@ -17,9 +17,9 @@
             </ul>
             <ul class="navbar-nav nav-flex-icons">
                 <li class="nav-item">
-                    <a data-toggle="modal" data-target="#exampleModal" class="nav-link rounded"
+                    <a data-toggle="modal" data-target="#exampleModal" class="nav-link balance rounded"
                        target="_blank">
-                        <i class="fab fa-github mr-1"></i> Denunce !
+                        <i class="fab fa-github mr-1"></i> <span class="denunce">Denunce !</span>
                     </a>
                 </li>
             </ul>
