--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js">
-
-
 
     {% block stylesheet %}{% endblock %}
     <link rel="icon" href="/assets/images/favicon.png">
@@ -20,6 +17,7 @@
     {% endblock %}
 </header>
 <body>
+{% block content %}{% endblock %}
 
 {% block javascript %}{% endblock %}
 
