--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -14,8 +14,13 @@
         {% include '/Home/_cards.html.twig' %}
 
     </div>
-    <img class="fond" src="/assets/images/fondblanc.svg" alt="fond" width="100%">
+    <div>
+
+        <h2 class="hunt" id="judge">HUNT HER !</h2>
+        {% include '/Home/_hunt.html.twig' %}
+    </div>
     {% include '/Home/_monthWitch.html.twig' %}
+    <img class="fond-orange" src="/assets/images/fondorange2.svg" alt="fond" width="100%">
 
 {% endblock %}
 
