--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,11 @@
     --greeny: #99A267;
 }
 
+@font-face {
+    font-family: 'Shadows Into Light', cursive;
+    src: url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+}
+
 body{
     overflow-x: hidden;
     margin: 0;
@@ -26,6 +31,7 @@ a.nav-link.rounded:hover {
     background-color: chocolate;
     color: black;
     border: chocolate;
+
 }
 
 .nav-link{
@@ -98,6 +104,7 @@ div.mep{
     width: 42%;
     color: #7A2B00;
     padding: 1.5em 0 0 1em;
+
 }
 
 .quotation{
@@ -340,13 +347,17 @@ div.infocardContainer{
     z-index: 11;
     margin-block-start: 10em;
 }
-.witch-of-the-month{
+div.witch-of-the-month{
+    position: absolute;
+    z-index: 12;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     margin-bottom: 100px;
+    margin-inline-start: 25em;
+    margin-block-start: 13em;
 }
 .pas-dinspi{
     display: flex;
@@ -377,17 +388,17 @@ div.infocardContainer{
     grid-gap: 15px;
     margin: 0 auto;
 }
-.card{
+.card-tf{
     position: relative;
     width: 300px;
     height: 500px;
-    background: darkred;
+    background: whitesmoke;
     margin: 0 auto;
     border-radius: 4px;
     box-shadow:0 2px 10px rgba(0,0,0,.2);
 }
-.card:before,
-.card:after
+.card-tf:before,
+.card-tf:after
 {
     content:"";
     position: absolute;
@@ -396,19 +407,19 @@ div.infocardContainer{
     width: 100%;
     height: 100%;
     border-radius: 4px;
-    background: #110f10;
+    background: #7A2B00;
     transition: 0.5s;
     z-index:-1;
 }
-.card:hover:before{
+.card-tf:hover:before{
     transform: rotate(20deg);
     box-shadow: 0 2px 20px rgba(0,0,0,.2);
 }
-.card:hover:after{
+.card-tf:hover:after{
     transform: rotate(10deg);
     box-shadow: 0 2px 20px rgba(0,0,0,.2);
 }
-.card .imgBx{
+.card-tf .imgBx{
     position: absolute;
     top: 10px;
     left: 10px;
@@ -419,13 +430,13 @@ div.infocardContainer{
     z-index: 1;
 }
 
-.card:hover .imgBx
+.card-tf:hover .imgBx
 {
     bottom: 80px;
     height: 350px;
 }
 
-.card .imgBx img{
+.card-tf .imgBx img{
     position: absolute;
     top: 0;
     left: 0;
@@ -434,7 +445,7 @@ div.infocardContainer{
     object-fit: cover;
 }
 
-.card .details{
+.card-tf .details{
     position: absolute;
     left: 10px;
     right: 10px;
@@ -443,7 +454,7 @@ div.infocardContainer{
     text-align: center;
 }
 
-.card .details h2{
+.card-tf .details h2{
     margin: 0;
     padding: 0;
     font-weight: 600;
@@ -452,7 +463,7 @@ div.infocardContainer{
     text-transform: uppercase;
 }
 
-.card .details h2 span{
+.card-tf .details h2 span{
     font-weight: 500;
     font-size: 14px;
     color: #777;
@@ -462,4 +473,39 @@ div.infocardContainer{
 .infocardContainer{
     display: flex;
     flex-direction: row;
+}
+
+.hunt{
+    position: relative;
+    z-index: 30;
+    margin-inline-start: 19em;
+}
+
+.fond-orange{
+    position: relative;
+    z-index: 11;
+    margin-block-start: 1em;
+}
+
+.end{
+    background-color: lightgrey;
+}
+
+.end2{
+    color: #7A2B00;
+}
+
+.end2:hover{
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+.card-body{
+    background-image: url("/assets/images/papierancien.jpg");
+    text-align: center;
+}
+
+.card-text{
+    font-size: 2vw;
+    font-weight: 500;
 }
