--- a/src/View/Home/_cards.html.twig
+++ b/src/View/Home/_cards.html.twig
@@ -1,15 +1,18 @@
 {% block content %}
 <div class="infocardContainer ">
-        <div class="row align-items-start">
+        <div class="row align-items-start mx-2">
     {%  for witch in witches %}
         <div class="col-lg-3 col-md-4 col-sm-12 my-5">
-            <div class="card">
+            <div class="card-tf">
                 <div class="imgBx">
                     <img src="/assets/images/{{ witch.photo }}">
                 </div>
                 <div class="details">
                     <h2>{{ witch.firstname }}<br><span>{{ witch.lastname }}<br>description: {{witch.attributs}}<br></span></h2>
+                    <button class="btn-danger">Go to the hell !</button>
+                    <button class="btn-primary">Save her !</button>
                 </div>
+
             </div>
         </div>
     {%  endfor %}
