--- a/src/View/Home/_monthWitch.html.twig
+++ b/src/View/Home/_monthWitch.html.twig
@@ -1,6 +1,6 @@
 <div class="witch-of-the-month">
     <div class="wotm-text">
-        <h2>&#128293; AWARDS &#128293;</h2>
+        <h2>&#128293; AWARD OF THE MONTH &#128293;</h2>
     </div>
     <div class="pas-inspi">
         <div class="witch-descript">
