--- a/src/View/Home/_navbar.html.twig
+++ b/src/View/Home/_navbar.html.twig
@@ -12,7 +12,7 @@
                     <a class="nav-link pt-3" href="#">HUNT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pt-3" href="#">AWARDS</a>
+                    <a class="nav-link pt-3" href="#">AWARD OF THE MONTH</a>
                 </li>
             </ul>
             <ul class="navbar-nav nav-flex-icons">
